# tsc

./: .gitignore  .pp.ghci  CHANGELOG.md  Makefile  README.md  asm  ast  ast2  cabal.project  run  tsc.cabal
app/: AST.hs  Lexer.hs  Main.hs  Options.hs  Parser.hs
src/: AST.hs  Compiler.hs  Linker.hs  Parser.hs  rts.c
src/App/: Main.hs  Options.hs
src/Core/: AST.hs  Analyser.hs  Code.hs  CodeGen.hs  Compiler.hs  Decomposer.hs  Desugarer.hs  Extractor.hs  IR.hs  Lexer.hs  Linker.hs  Options.hs  Parser.hs  Prelude.hs  PrettyPrinter.hs  Renamer.hs  Token.hs  Transform.hs  Transformer.hs  TypeChecker.hs  rts.c
src/Core/Analyser/: AST.hs
src/Core/CodeGen/: Emitters.hs  Expr.hs  Monad.hs  Primitives.hs  State.hs
src/Core/Parser/: AST.hs
src/Core/Prelude/: prelude.scm
src/Core/RTS/: gc.c  gc.h  main.c  memory.c  memory.h  print.c
src/Core/Transformers/: Desugarer.hs  FreeFinder.hs  Lifter.hs  Renamer.hs  Resolver.hs  TailMarker.hs
src/Core/TypeChecker/: Monad.hs  Types.hs  Variable.hs
test/: AnalyserSpec.hs  CompilerSpec.hs  ParserSpec.hs  RenamerSpec.hs  TypeCheckerSpec.hs
test/cases/: add.exp  add.lisp  and.exp  and.lisp  and.scm  arg_over_let.lisp  arg_over_let.scm  bool.scm  car.lisp  car.scm  cdr.exp  cdr.scm  char.exp  char.lisp  char_conversion.exp  char_conversion.scm  closure.lisp  closure_over_arg.lisp  closure_to_closure.lisp  closure_to_closure.scm  cons.exp  cons.lisp  cons.scm  eq.scm  fib.lisp  fib.scm  fixnum.exp  fixnum.lisp  if.scm  lambda_params.exp  lambda_params.lisp  length.scm  lessthan.exp  lessthan.scm  let.exp  let.scm  let_overrides_lambda.scm  list.exp  list.scm  map.exp  (+17 more)
