cabal-version:      3.4
name:               tsc
version:            0.1.0.0
maintainer:         terje@stoeback.net
author:             Terje Stoeback
extra-source-files:
  CHANGELOG.md,
  src/Core/rts.c

common shared
  default-language: Haskell2010
  default-extensions:
    GADTs,
    LambdaCase,
    ImportQualifiedPost,
    OverloadedStrings,
    TemplateHaskell,
  ghc-options:
    -Wall

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Core.AST,
    Core.CodeGen,
    Core.Compiler,
    Core.Linker,
    Core.Options,
    Core.Parser,
  build-depends:
    base          ^>= 4.14,
    bytestring    ^>= 0.11,
    either        ^>= 5.0,
    file-embed    ^>= 0.0,
    megaparsec    ^>= 9.0,
    typed-process ^>= 0.2,
    temporary     ^>= 1.3,
    text          ^>= 1.2,
    transformers  ^>= 0.5,
    utf8-string   ^>= 1.0,

executable tsc
  import:           shared
  hs-source-dirs:   src/App
  main-is:          Main.hs
  other-modules:    Options
  default-language: Haskell2010
  build-depends:
    base                 ^>= 4.14,
    bytestring           ^>= 0.11,
    optparse-applicative ^>= 0.16,
    text                 ^>= 1.2,
    tsc

test-suite spec
  import:             shared
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:
    base  ^>= 4.14,
    text  ^>= 1.2,
    hspec ^>= 2.7,
    tsc
  other-modules:
    ParserSpec
  build-tool-depends: hspec-discover:hspec-discover == 2.*
