cabal-version:      3.4
name:               tsc
version:            0.1.0.0
maintainer:         terje@stoeback.net
author:             Terje Stoeback
extra-source-files:
  CHANGELOG.md,
  src/Core/RTS/gc.c,
  src/Core/RTS/gc.h,
  src/Core/RTS/main.c,
  src/Core/RTS/memory.h,
  src/Core/RTS/memory.c,
  src/Core/RTS/print.c,
  src/Core/Prelude/prelude.scm

common shared
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    ImportQualifiedPost,
    OverloadedStrings,
    QualifiedDo,
    StandaloneDeriving,
    TemplateHaskell,
    TupleSections
  ghc-options:
    -Wall
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude
  build-depends:
    base          ^>= 4.15,
    bytestring    ^>= 0.11,
    relude        ^>= 1.0,
    text          ^>= 1.2,

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Core.AST,
    Core.CodeGen,
    Core.CodeGen.Emitters,
    Core.CodeGen.Expr,
    Core.CodeGen.Monad,
    Core.CodeGen.Primitives,
    Core.Compiler,
    Core.Decomposer,
    Core.IR,
    Core.Linker,
    Core.Options,
    Core.Parser,
    Core.Prelude,
    Core.PrettyPrinter,
    Core.Transform,
    Core.Transformers.Desugarer,
    Core.Transformers.FreeFinder,
    Core.Transformers.Lifter,
    Core.Transformers.Renamer,
    Core.Transformers.Resolver,
    Core.Transformers.TailMarker,
    Core.TypeChecker,
    Core.TypeChecker.Monad,
    Core.TypeChecker.Types,
    Core.TypeChecker.Variable,
  build-depends:
    containers    ^>= 0.6,
    either        ^>= 5.0,
    file-embed    ^>= 0.0,
    filepath      ^>= 1.4,
    lens          ^>= 5.0,
    megaparsec    ^>= 9.0,
    mtl           ^>= 2.2,
    temporary     ^>= 1.3,
    typed-process ^>= 0.2,
    utf8-string   ^>= 1.0,

executable tsc
  import:           shared
  hs-source-dirs:   src/App
  main-is:          Main.hs
  other-modules:    Options
  build-depends:
    optparse-applicative ^>= 0.16,
    tsc
  ghc-options:
    -Wall
    -threaded

test-suite spec
  import:             shared
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:
    directory     ^>= 1.3,
    filepath      ^>= 1.4,
    hspec         ^>= 2.7,
    mtl           ^>= 2.2,
    temporary     ^>= 1.3,
    typed-process ^>= 0.2,
    utf8-string   ^>= 1.0,
    tsc
  other-modules:
    CompilerSpec
    ParserSpec
    RenamerSpec
  ghc-options:
    -Wall
    -threaded
  build-tool-depends: hspec-discover:hspec-discover == 2.*
